# zedit

./: .gitinfo  Cargo.toml  README.md
.github/workflows/: release.yml
benches/: benchmarks.rs
src/: browser.rs  buffer.rs  editor.rs  main.rs  syntax.rs  terminal.rs
tests/: integration_tests.rs
