[package]
name = "zedit"
version = "0.1.0"
edition = "2024"
authors = ["zuedev"]
description = "Fast, dependency-free editing with syntax highlighting and directory browsing"
license = "Unlicense"
repository = "https://github.com/zuedev/zedit"
keywords = ["editor", "text-editor", "terminal", "syntax-highlighting"]
categories = ["command-line-utilities", "text-editors"]

[dependencies]

[[bin]]
name = "zedit"
path = "src/main.rs"

[[bin]]
name = "benchmarks"
path = "benches/benchmarks.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.bench]
opt-level = 3
lto = true
